[gd_scene load_steps=4 format=2]

[ext_resource path="res://objects/cave/Key.gd" type="Script" id=1]
[ext_resource path="res://sprites/key.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[node name="Key" type="Area2D" groups=["coin"]]
z_index = -5
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
offset = Vector2( 2.5, 0 )
hframes = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4, 4 )
shape = SubResource( 1 )

[node name="Timer_NextFrame" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="body_entered" from="." to="." method="_on_Coin_body_entered"]
[connection signal="timeout" from="Timer_NextFrame" to="." method="_on_Timer_NextFrame_timeout"]
